--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -23,7 +23,7 @@ const { title = "Home" } = Astro.props;
   <body>
     <div class="container">
       <div class="nav">
-        <a class="brand" href="/">Xie's Blog</a>
+        <a class="brand" href="/">Xie's Space</a>
         <div class="row nav-right">
           <a href="/about">About me</a>
           <ThemeSwitcher />
