--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,7 +2,7 @@
 import "../styles/global.css";
 import ThemeSwitcher from "../components/ThemeSwitcher.astro";
 
-const { title = "Home" } = Astro.props;
+const { title = "Xie's Island" } = Astro.props;
 ---
 
 <!doctype html>
@@ -23,7 +23,7 @@ const { title = "Home" } = Astro.props;
   <body>
     <div class="container">
       <div class="nav">
-        <a class="brand" href="/">Xie's Space</a>
+        <a class="brand" href="/">Xie's Island</a>
         <div class="row nav-right">
           <a href="/about">About me</a>
           <ThemeSwitcher />
